# ggkDecentSkale

./: Makefile  README.md  aclocal.m4  config.status  configure  configure.ac  nM1syncM1aPi  nPisyncM1aPi
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: DecentSkale.cpp  LaunchDecent.cpp  Makefile  Makefile.am  Makefile.in  MakefileOrig-in.txt  Server.cpp  Server.h  SkaleCalibr.cpp  SkaleDatServer.cpp  SkaleDatServer.h  SkalePrtConfig.cpp  Utils.h  standalone.cpp  standaloneOrig.cpp
src/.deps/: standalone-SkaleDatServer.Po
